# InferenceEngine

./: .gitignore  Benchmark.md  CMakeLists.txt  README.md  Trinton_stress_test.py  batch_test.py  environment.yml  main.py
App/: main.cpp
Testers/: test_full_systems.py  test_loader.py  verify_interop.py
bindings/: python_bindings.cpp
include/audioguard/: AudioLoader.h  InferenceEngine.h  Preprocessor.h
model_lab/: dsp.py  model.onnx  model.py  model_quantized.onnx  prepare_model.py
model_repository/audioguard/: config.pbtxt
model_repository/audioguard/1/: model.onnx
src/: AudioLoader.cpp  InferenceEngine.cpp  Preprocessor.cpp
